welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: not found: value a
    a = getCouleurSol()
    ^Array2:7: error: not found: value a
    T(i) = a
           ^