welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var h = getMondeHauteur()-1
  var l = getMondeLargeur()
  var T = new Array[Color](h)
  for (i<- 0 to T.length-1){
    a = getCouleurSol()
    T(i) = a
    avance()
  }
}

def tampon(t:Array[Color],H:Int){
  setCouleurBrosse(t(H-1))
  baisseBrosse()
  leveBrosse()
}
  
  
  